# cloudphone-sdk-python

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: __init__.py  apk_installer.py  device_status_monitor.py  douyin_comment_scraper.py  screenshot_collector.py
src/cloudphone/: __init__.py  cli.py  client.py  models.py
tests/: test_client.py
