[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cloudphone-sdk"
version = "0.1.0"
description = "Python SDK for CloudPhone -- manage Android cloud devices with dedicated IPs"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = ["requests>=2.28.0", "pillow>=9.0.0"]

[project.optional-dependencies]
dev = ["pytest>=7.0.0", "black>=23.0.0", "mypy>=1.0.0"]

[project.scripts]
cloudphone-cli = "cloudphone.cli:main"

[project.urls]
Homepage = "https://www.android-cloud-device.com"
Repository = "https://github.com/luoshixin93-sudo/cloudphone-sdk-python"

[tool.setuptools.packages.find]
where = ["src"]
